--- a/templates/admin-callback.mustache
+++ b/templates/admin-callback.mustache
@@ -21,7 +21,7 @@
 
     Example context (json):
     {
-        "wwwroot": "https://www.example.com",
+        "wwwroot": "https://www.example.com"
     }
 }}
 
