--- a/templates/process.mustache
+++ b/templates/process.mustache
@@ -24,7 +24,9 @@
 
     Example context (json):
     {
-        "ref": "123456",
+        "reference": "123456",
+        "amount": "50.00",
+        "deadtime": "2 july 2024",
         "success": "1",
         "error": ""
     }
